# hermes

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: DEPLOY.md  INSTALL.md
hermes/: __init__.py  __main__.py  cli.py  connect.py  mcp_server.py  memory.py  py.typed
tests/: test_cli.py  test_connect.py  test_mcp_server.py  test_memory.py
