[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-hermes"
version = "0.1.0"
description = "A model-agnostic, portable long-term memory framework for AI agents (stdlib-only, SQLite + TF-IDF recall)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Cognis Digital LLC" },
]
keywords = [
    "agent",
    "memory",
    "llm",
    "mcp",
    "tf-idf",
    "sqlite",
    "retrieval",
    "hermes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Intentionally no runtime dependencies: standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/hermes"
Source = "https://github.com/cognis-digital/hermes"

[project.scripts]
hermes = "hermes.cli:main"
hermes-mcp = "hermes.mcp_server:main"

[tool.setuptools]
packages = ["hermes"]

[tool.setuptools.package-data]
hermes = ["py.typed"]
